--- a/index.html
+++ b/index.html
@@ -76,15 +76,15 @@
             </div>
         </div>
         <div class="multiple-items">
-            <div class="carousel-item"><img src="images/xcarousel (1).jpg" alt=""></div>
-            <div class="carousel-item"><img src="images/xcarousel (2).jpg" alt=""></div>
-            <div class="carousel-item"><img src="images/xcarousel (3).jpg" alt=""></div>
-            <div class="carousel-item"><img src="images/xcarousel (4).jpg" alt=""></div>
-            <div class="carousel-item"><img src="images/xcarousel (5).jpg" alt=""></div>
-            <div class="carousel-item"><img src="images/xcarousel (6).jpg" alt=""></div>
-            <div class="carousel-item"><img src="images/xcarousel (7).jpg" alt=""></div>
-            <div class="carousel-item"><img src="images/xcarousel (8).jpg" alt=""></div>
-            <div class="carousel-item"><img src="images/xcarousel (9).jpg" alt=""></div>
+            <div class="carousel-item"><img src="images/imagem1.jpg" alt="praia de maragogi"></div>
+            <div class="carousel-item"><img src="images/imagem2.jpg" alt="piscina natural meio da floresta"></div>
+            <div class="carousel-item"><img src="images/imagem3.jpg" alt="cachoeira"></div>
+            <div class="carousel-item"><img src="images/imagem4.jpg" alt="rio de janeiro"></div>
+            <div class="carousel-item"><img src="images/imagem5.jpg" alt="piscinas naturais"></div>
+            <div class="carousel-item"><img src="images/imagem6.jpg" alt="topo da montanha"></div>
+            <div class="carousel-item"><img src="images/imagem7.jpg" alt="lençóis maranhenses"></div>
+            <div class="carousel-item"><img src="images/imagem8.jpg" alt="lençóis maranhenses"></div>
+            <div class="carousel-item"><img src="images/imagem9.jpg" alt="montanhas"></div>
         </div>
     </section>
 
@@ -92,7 +92,7 @@
             <div class="container-fluid" >
                 <div class="row">
                     <div class="col-lg-11">
-                        <img src="images/hero.jpg" alt="Piscina natural no meio da floresta">
+                        <img src="images/imagem1.jpg" alt="Praia de maragogi">
                         <div class="row gx-0">
                             <div class="col-xl-8 col-lg-10 col-md-11 offset-lg-1 square">
                                 <div class="row">                                    
@@ -119,7 +119,7 @@
                     <div class="row">
                         <div class="col-sm">
                             <div class="card">
-                                <img src="images/xblog1.jpg" class="" alt="cachoeira">
+                                <img src="images/imagem3.jpg" class="" alt="cachoeira">
                                 <div class="card-body">
                                     <h5 class="card-title">Card title</h5>
                                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -136,7 +136,7 @@
                         </div>
                         <div class="col-sm">
                             <div class="card">
-                                <img src="images/xcarousel (8).jpg" class="" alt="cachoeira">
+                                <img src="images/imagem12.jpg" class="" alt="cachoeiras">
                                 <div class="card-body">
                                     <h5 class="card-title">Card title</h5>
                                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -153,7 +153,7 @@
                         </div>
                         <div class="col-sm">
                             <div class="card">
-                                <img src="images/xcarousel (9).jpg" class="" alt="cachoeira">
+                                <img src="images/imagem15.jpg" class="" alt="mar">
                                 <div class="card-body">
                                     <h5 class="card-title">Card title</h5>
                                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
